feat: implement view management
